# Adafruit_CircuitPython_BusDevice

./: .gitignore  .pylintrc  .travis.yml  README.md  README.rst  conf.py  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  setup.py
adafruit_bus_device/: i2c_device.py  index.rst  spi_device.py
docs/: api.rst  conf.py  conf_old.py  examples.rst  index.rst
examples/: busdevice_read_register_i2c_simpletest.py  busdevice_read_register_spi_simpletest.py
